Added javax.xml.bind:jaxb-api:2.3.0 to build.gradle, to enable JAR.